# divedb

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  schema.graphql
divedb_core/: Cargo.toml
divedb_core/src/: lib.rs
divedb_macro/: Cargo.toml
divedb_macro/src/: lib.rs
front/: .graphqlrc.yml  Dockerfile  codegen.yml  docker.sh  package.json  svelte.config.js  vite.config.ts
front/src/: app.html  hooks.server.ts
front/src/lib/: category.ts  session.ts
front/src/lib/components/: CheckLogin.svelte  Comments.svelte  DiveMap.svelte  DiveSiteSummary.svelte  EditableMap.svelte  EditableRegion.svelte  FormRow.svelte  ImageList.svelte  References.svelte  SealifeSummary.svelte  Search.svelte  SearchResult.svelte  SiteMetrics.svelte
front/src/lib/components/categories/: CategoryPicker.svelte  CategoryView.svelte
front/src/lib/graphql/: client.ts  generated.ts
front/src/lib/icons/: BaseIcon.svelte  ChatFilled.svelte  ChatOutline.svelte  CheckIcon.svelte  DiveLogIcon.svelte  DiveSiteIcon.svelte  HeartFilled.svelte  HeartOutline.svelte  LinkIcon.svelte  MastodonIcon.svelte  PhotoIcon.svelte  SealifeIcon.svelte  SearchIcon.svelte
front/src/lib/util/: bounds.ts  fbRedirect.ts  formatGas.ts  formatMinutes.ts  imageAlt.ts
front/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
front/src/routes/admin/: +page.svelte  +page.ts
front/src/routes/dives/: +page.svelte  +page.ts
front/src/routes/divesites/: +page.svelte  +page.ts
front/src/routes/feedback/: +page.svelte
front/src/routes/forgot-password/: +page.svelte
front/src/routes/login/: +page.svelte  +page.ts
front/src/routes/photos/: +page.svelte  +page.ts
front/src/routes/privacy/: +page.svelte
front/src/routes/register/: +page.svelte  +page.ts
front/src/routes/reset-password/: +page.svelte
front/src/routes/sealife/: +page.svelte  +page.ts
front/src/routes/settings/: +page.svelte
front/src/routes/verify-email/: +page.svelte
front/src/style/: app.scss
front/src/style/spectre/: _accordions.scss  _animations.scss  _asian.scss  _autocomplete.scss  _avatars.scss  _badges.scss  _bars.scss  _base.scss  _breadcrumbs.scss  _buttons.scss  _calendars.scss  _cards.scss  _carousels.scss  _chips.scss  _codes.scss  _columns-order.scss  _comparison-sliders.scss  _dropdowns.scss  _empty.scss  _filters.scss  _forms.scss  _hero.scss  _icons.scss  _labels.scss  _layout.scss  _media.scss  _menus.scss  _meters.scss  _mixins.scss  _modals.scss  _navbar.scss  _navs.scss  _normalize.scss  _off-canvas.scss  _pagination.scss  _panels.scss  _parallax.scss  _popovers.scss  _progress.scss  _sliders.scss  (+14 more)
src/: activitypub.rs  chart.rs  db.rs  email.rs  escape.rs  facebook.rs  frontend.rs  graphql.rs  main.rs  openid.rs  photos.rs  plan.rs  schema.rs  search.rs  seo.rs  subsurface.rs  token.rs
src/activitypub/: activities.rs
src/db/: categories.rs  comment.rs  dive.rs  dive_site.rs  email_verification.rs  feedback.rs  og_reference.rs  password_reset.rs  photo.rs  region.rs  sealife.rs  user.rs
src/db/migrations/: V001__initial_setup.sql  V002__regions_dive_site_photo.sql  V003__add_date_field.sql  V004__slugify_sites.sql  V005__photo_site.sql  V006__sealife.sql  V007__user_name.sql  V008__populate_categories.sql  V009__fix_categories.sql  V010__photo_upload_date.sql  V011__sealife_revisions.sql  V012__feedback_table.sql  V013__watermark_features.sql  V014__sealife_hide_location.sql  V015__open_graph_references.sql  V016__passwords.sql  V017__photo_fields.sql  V018__regions_slug.sql  V019__social.sql  V020__external_users.sql  V021__email_verification.sql  V022__deco_model.sql  create_apub_keys.rs  external_sql.rs  fix_photo_dive_ids.rs  mod.rs
src/schema/: activitypub.rs  categories.rs  comment.rs  dive.rs  dive_plan.rs  dive_site.rs  email_verification.rs  feedback.rs  og_reference.rs  password_reset.rs  photo.rs  region.rs  sealife.rs  user.rs
templates/: email_verification.mjml  email_verification.txt  password_reset.mjml  password_reset.txt
(+174 files in other folders)
