[package]
name = "divedb"
version = "0.1.0"
authors = ["cetra3 <cetra3@hotmail.com>"]
edition = "2021"
license = "AGPL-3.0"

[workspace]
members = ["divedb_macro", "divedb_core"]

[[bin]]
name = "divedb"
path = "src/main.rs"

[dependencies]
serde = "1.0.105"
serde_json = "1.0.48"
uuid = { version = "1.18.0", features = ["serde", "v4", "v5"] }
chrono = { version = "0.4.11", features = ["serde"] }
tokio = { version = "1.0", features = ["full", "tracing"] }
actix-web = "4.11.0"
actix-http = "3.11.0"
actix-multipart = "0.7.2"
actix-files = "0.6.0"
async-graphql = { version = "7", features = ["uuid", "chrono", "tracing"] }
async-graphql-actix-web = "7"

deadpool = "0.9.2"
deadpool-postgres = "0.10.1"

structopt = "0.3.12"
futures = "0.3"
scrypt = "0.3.1"
aes-gcm = "0.9.3"
base64 = "0.12.3"
rand = "0.7.3"
git2 = "0.14.4"
tempdir = "0.3.7"
async-trait = "0.1.36"
dataloader = { version = "0.14.0", default-features = false, features = [
    "runtime-tokio",
] }
tokio-postgres = { version = "0.7", features = [
    "with-chrono-0_4",
    "with-uuid-1",
] }
postgres-types = { version = "0.2", features = ["derive"] }
bytes = "1.0"
kamadak-exif = "0.5.2"
dotenv = "0.15.0"
reqwest = { version = "0.11.9", features = ["json"] }
sitemap = "0.4.1"
twoway = "0.2.1"
image = "0.24"
imageproc = "0.23.0"
pulldown-cmark = "0.8.0"
rusttype = "0.9.2"
once_cell = "1.4.1"
divedb_core = { path = "divedb_core" }
tantivy = "0.24.2"
scraper = "0.12.0"
mrml = "1.2"
lettre = { version = "0.10.0-rc.4", features = [
    "tokio1-native-tls",
    "smtp-transport",
    "pool",
    "native-tls",
    "hostname",
    "builder",
] }
governor = "0.4.2"
askama = "0.11.1"
webp = "0.2.2"
tokio-stream = "0.1.9"
activitypub_federation = { default-features = false, version = "0.5.0-beta.5", features = [
    "actix-web",
] }
url = { version = "2.4.1", features = ["serde"] }
enum_delegate = "0.2.0"
resvg = "0.36.0"

tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
tracing-error = "0.2.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
kuchikiki = "0.8.2"
console-subscriber = "0.2.0"
foyer = { version = "0.18", features = ["serde"] }
